<resources>
    <string name="app_name">KinderSmart</string>
    <string name="start">Mulai Bermain</string>
    <string name="help">Video Edukasi</string>
    <string name="exit">Keluar</string>
    <string name="high_score">Skor Tertinggi</string>
    <string name="tebak_gambar">Tebak Gambar</string>
    <string name="pengenalan">Mari Mengenal</string>
    <string name="matematika">Belajar Berhitung</string>
    <string name="gambarapa">Gambar Apakah Ini ?</string>
    <string name="hewan">Hewan</string>
    <string name="buah">Buah</string>
    <string name="organ">Anggota Tubuh</string>
    <string name="warna">Warna</string>
    <string name="penjumlahan">Penjumlahan</string>
    <string name="pengurangan">Pengurangan</string>
    <string name="hitungGambar">Hitung Gambar</string>
    <string name="tebakAngka">Tebak Angka</string>
    <string name="score_tinggi">Selamat Score Anda</string>
    <string name="score_rendah">Sayang Sekali Jawaban Anda Tidak Ada Yang Benar</string>
    <string name="high_score_tebak_hewan">High Score Tebak Hewan</string>
    <string name="high_score_tebak_buah">High Score Tebak Buah</string>
    <string name="nilai_tertinggi_tebak_hewan">Nilai Tertinggi Tebak Hewan</string>
    <string name="nilai_tertinggi_tebak_buah">Nilai Tertinggi Tebak Buah</string>
    <string name="nilai_tertinggi_tebak_organ">Nilai Tertinggi Tebak Organ</string>
    <string name="nilai_tertinggi_tebak_warna">Nilai Tertinggi Tebak Warna</string>
    <string name="nilai_tertinggi_penjumlahan">Nilai Tertinggi Penjumlahan</string>
    <string name="nilai_tertinggi_pengurangan">Nilai Tertinggi Pengurangan</string>
    <string name="nilai_tertinggi_hitung_gambar">Nilai Tertinggi Hitung Gambar</string>
    <string name="nilai_tertinggi_tebak_angka">Nilai Tertinggi Tebak Angka</string>
    <string name="_0">0</string>
    <string name="tekan_telornya">Pecahkan Telurnya Sekarang!</string>
    <string name="play_again">Bermain Lagi</string>
    <string name="angka">Angka</string>
    <string name="bentuk">Organ</string>
    <string name="back2menu">Kembali Ke Menu ?</string>
    <string name="confirm_exit">Apakah Anda Yakin Untuk Keluar ?</string>
    <string name="keluar">Keluar</string>
    <string name="rc_info">Silahkan Pecahkan Telurnya Untuk Melihat Nilai Yang Anda Peroleh</string>
    <string name="menu">Kembali Ke Menu</string>
    <string name="textpreview">Text Preview</string>
    <string name="nilai_tertinggi">nilai tertinggi</string>
    <string name="keluar_permainan">Keluar Permainan ?</string>
    <string name="confrim_2menu">Apakah Anda Yakin Untuk Kembali Ke Menu ?</string>
    <string name="stop_playing">Berhenti Bermain ?</string>
    <string name="confrim_stop_playing">Apakah Anda Yakin Untuk Berhenti Bermain ?</string>
    <string name="Koneksi_error">Mohon Maaf Terjadi Kendala Koneksi Silahkan Periksa Koneksi Internet Anda</string>

</resources>
