<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".Activity.KategoriActivity">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvtebakGambar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/tebak_gambar"
            android:textColor="@color/chalk"
            android:textSize="16dp"
            android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:id="@+id/linearTebakGambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/llTebakHewan"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivTebakHewan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/binatang"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hewan"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTebakAngka"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivTebakBentuk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/buah"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buah"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTebakBentuk"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivTebakWarna"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/organ"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organ"/>

        </LinearLayout>

       <LinearLayout
           android:id="@+id/llTebakWarna"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1">

           <ImageView
               android:layout_gravity="center"
               android:id="@+id/ivTebakAngka"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:background="@drawable/backgroundimage"
               android:src="@drawable/warna"
               android:padding="10dp"
               android:scaleType="fitCenter"/>

           <TextView
               android:textColor="@color/chalk"
               android:layout_gravity="center"
               android:textSize="12sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/warna"/>

       </LinearLayout>

    </LinearLayout>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_marginBottom="10dp"
            android:background="@color/chalk" />

        <TextView
            android:textColor="@color/chalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/pengenalan"
            android:textSize="16dp"
            android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:id="@+id/linearPengenalan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/llKenalHewan"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivKenalHewan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/mengenal_hewan2"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hewan"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llKenalAngka"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivKenalAngka"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/mengenal_buah"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buah"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llKenalBentuk"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivKenalBentuk"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/mengenal_organ"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organ"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llKenalWarna"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivKenalWarna"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/mengenal_warna"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warna"/>

        </LinearLayout>


    </LinearLayout>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:layout_marginBottom="10dp"
            android:background="@color/chalk" />

        <TextView
            android:textColor="@color/chalk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/matematika"
            android:textSize="16dp"
            android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:id="@+id/linearMatematika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:layout_marginTop="10dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/llPenjumlahan"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivPenjumlahan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/pertambahan1"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penjumlahan"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPengurangan"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivPengurangan"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/pengurangan"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/pengurangan"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPerkalian"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivPerkalian"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/hitung_gambar"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textSize="12sp"

                android:layout_height="wrap_content"
                android:text="@string/hitungGambar"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPembagian"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/ivPembagian"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/backgroundimage"
                android:src="@drawable/belajar_angka"
                android:padding="10dp"
                android:scaleType="fitCenter"/>

            <TextView
                android:textColor="@color/chalk"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tebakAngka"/>

        </LinearLayout>

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="40dp">

            <LinearLayout
                android:id="@+id/linearBack2menu"
                android:padding="10dp"
                android:background="@drawable/transparent"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back2menu"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAllCaps="true"
                    android:textColor="@color/chalk"/>

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</RelativeLayout>
